# hx

./: Cargo.toml  README.ja.md  README.md  install.sh
.github/: ehx.rb.template  he.rb.template  install.sh
.github/workflows/: release.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
pool/main/e/ehx/: ehx_amd64.deb  ehx_arm64.deb
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/buffer/: document.rs
src/ui/: hex_view.rs
